--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .message-box{
   position: fixed;
   bottom: 0;
-  background: #fff;
+  background-color: #fff !important;
 }
 .chatwindow-header{
 width: 100%;
